Basic secure auth functionalities

--- a/blazor-app/Shared/MainLayout.razor
+++ b/blazor-app/Shared/MainLayout.razor
@@ -10,10 +10,13 @@
                 <NavLink class="nav-link" href="/">Home</NavLink>
             </li>
             <li class="nav-item">
+                <NavLink class="nav-link" href="/register">Register</NavLink>
+            </li>
+            <li class="nav-item">
                 <NavLink class="nav-link" href="/login">Login</NavLink>
             </li>
             <li class="nav-item">
-                <NavLink class="nav-link" href="/register">Register</NavLink>
+                <NavLink class="nav-link" href="/forgotPassword">Forgot password</NavLink>
             </li>
             <li class="nav-item">
                 <NavLink class="nav-link" href="/restricted">Restricted</NavLink>
