--- a/blazor-app/Pages/Index.razor
+++ b/blazor-app/Pages/Index.razor
@@ -2,6 +2,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>LoginExample - auth basic functionalities app</h1>
 
-Welcome to auth example app.
+It provides endpoints for user login, register, logout and much more, allowing users to securely access and manage their accounts. 
+Check for API documentation: https://localhost:7196/swagger/index.html
